# personal_api

./: .gitignore  Cargo.toml  docker-compose.yaml  papi_line_server.py
papi_backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
papi_backend/scripts/: build_and_deploy.sh  build_and_deploy_backend.sh  stop_and_remove.sh  stop_and_remove_backend.sh
papi_backend/src/: main.rs
papi_backend/src/api/: api.rs  handlers.rs  mod.rs  types.rs
papi_backend/src/auth_db_client/: mod.rs
papi_backend/src/authorization/: handlers.rs  types.rs
papi_backend/src/oauth_client/: mod.rs  types.rs
papi_backend/src/papi_line_client/: mod.rs
papi_frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
papi_frontend/app/: ClientIdContext.tsx  layout.tsx  page.tsx
papi_frontend/app/auth/callback/: page.tsx
papi_frontend/app/callback/: page.tsx
papi_frontend/app/components/: PapiLogin.tsx
papi_line/: .dockerignore  Dockerfile  papi_line_server.py  requirements.txt  utils.py
papi_line/pipeline/: extract.py  knowledge_graph.py  transform.py
papi_line/scripts/: build_and_deploy_pipeline.sh
papi_line/tests/: __init__.py  test_flatten.py  test_transform.py
src/: main.rs
src/authorization/: handlers.rs  mod.rs  types.rs
src/oauth_client/: mod.rs  types.rs
src/papi_line_client/: mod.rs
src/utils/: mod.rs  types.rs
