[package]
name = "personal_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
actix-web = { version = "4.0.1", features = ["rustls"] }
rustls = "0.20.4"
rustls-pemfile = "1.0.0"
actix-cors = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
